# pallets

./: Cargo.toml  README.md
.github/workflows/: ci.yml
pallet-common/: Cargo.toml  README.md
pallet-common/src/: lib.rs
pallet-miner/: Cargo.toml  README.md
pallet-miner/src/: lib.rs  mock.rs  tests.rs
pallet-power/: Cargo.toml  README.md
pallet-power/src/: lib.rs  mock.rs  tests.rs
