[package]
edition = '2018'
name = 'pallet-common'
version = "0.1.0"
license = "Unlicense"
description = "Common types and traits for Actors"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "68d715719add5ed0473585f8ce38dd312a69a063" }

[features]
default = ['std']
std = [
	'codec/std',
]
