[package]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "pallet-miner"
description = "Pallet for Miner Actor"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "2.0.0"

[dependencies]
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate"}
pallet-common = { default-features = false, path = "../pallet-common" }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-power = { default-features = false, path = "../pallet-power" }
serde = { version = "1.0.101" }


[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-common/std",
    "sp-runtime/std",
]
